testdata/accumulate01.reject.out
type error: can not unify
[32mSucc Zero[m
with
[32mZero[m

in "testdata/accumulate01.reject.lc" (line 9, column 60):
  fragmentStream    = rasterizePrimitives rasterCtx Smooth primitiveStream
                                                           ^^^^^^^^^^^^^^^
